# quant-rollout

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: basic_usage.py  simulate_rollout.py
src/quant_rollout/: __init__.py  core.py  metrics.py
tests/: test_gate.py  test_kill_switch.py  test_metrics.py  test_rollout_simulation.py
